fixing some spacing issues, hopefully will be more pleasing to the eye now

--- a/articles/article_stylesheet.css
+++ b/articles/article_stylesheet.css
@@ -30,7 +30,7 @@ h1 {
 }
 
 p {
-  margin-bottom: .3em
+  margin-bottom: .5em
 }
 
 #links a {
